--- a/src/app/shared/components/home/home.component.html
+++ b/src/app/shared/components/home/home.component.html
@@ -11,8 +11,7 @@
 
         <div class="col-md-12 main-home">
             <img class="main-image" src="../../assets/images/main_photo.jpg" alt="...">
-            <h1 *ngIf="country_id === 1">{{'home.Find Your Perfect' | translate}} {{'home.Future Home EGY' | translate}}</h1>
-            <h1 *ngIf="country_id === 2">{{'home.Find Your Perfect' | translate}} {{'home.Future Home KSA' | translate}}</h1>
+            <h1>{{'home.Find Your Perfect' | translate}} {{'home.Future Home EGY' | translate}}</h1>
 
             <div class="search-section">
 
