--- a/src/app/shared/components/single-project/single-project.component.html
+++ b/src/app/shared/components/single-project/single-project.component.html
@@ -100,7 +100,7 @@
                               <!-- // images -->
                               <div class="images">
                                   <div class="col-sm-12 col-lg-10">
-                                      <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                                      <div id="carouselExampleIndicators" class="carousel slide" data-bs-interval="false">
                                           <div class="carousel-inner">
                                               <div class="switcher">
                                                   <!-- <select [(ngModel)]="activeItem" (change)="onChangeSlider(activeItem)"
