--- a/src/app/components/buyer/unit-details/unit-details.component.html
+++ b/src/app/components/buyer/unit-details/unit-details.component.html
@@ -7,15 +7,21 @@
         <div class="col-xs-12 col-md-10 main-row">
             <div class="row">
                 <div class="col-sm-12 col-lg-8">
-                    <div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-bs-ride="carousel">
+                    <div id="carouselExampleIndicators" class="carousel slide" data-bs-interval="false">
+                        <div class="carousel-indicators">
+                            <div *ngFor="let item of sliderData; let i = index">
+                                <button type="button" [ngClass]="{'active': i === activeImageId}" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="i" aria-current="true" aria-label="Slide 1"></button>
+                            </div>
+                        </div>
+
                         <div class="carousel-inner">
-                            <div class="switcher">
+                            <div class="switcher" style="display: none;">
                                 <select [(ngModel)]="activeItem" (change)="onChangeSlider(activeItem)"
                                     class="form-select form-select-lg mb-3 float-end"
                                     aria-label=".form-select-lg example">
                                     <option value="" selected><span></span>{{'propertyDetails.All images' | translate}}
                                     </option>
-                                    <option *ngFor="let item of sliderTags" [selected]="activeItem" value="{{item}}">
+                                    <option *ngFor="let item of sliderTags" [selected]="item === activeItem" value="{{item}}">
                                         {{item}}</option>
                                 </select>
                                 <img class="img-icon" src="../../../../assets/images/photo.svg" alt="...">
@@ -26,7 +32,12 @@
                             <div *ngFor="let result of sliderData; let i = index">
                                 <div [attr.init]="i === activeImageId?setActiveIndex(i): false" class="carousel-item" 
                                     [ngClass]="{'active': i === activeImageId}">
-                                    <img src={{result.img}} title={{result.title}} class="slider-img" alt="..."/>
+
+                                    <span class="image-tag">
+                                        {{ result.title }}
+                                    </span>
+
+                                    <img src={{result.image}} title={{result.title}} class="slider-img" alt="..." [style.height.px]="customHeight"/>
                                 </div>
 
                             </div>
