--- a/src/app/components/seller/unit-details/unit-details.component.html
+++ b/src/app/components/seller/unit-details/unit-details.component.html
@@ -7,9 +7,15 @@
         <div class="col-xs-12 col-md-10 main-row">
             <div class="row">
                 <div class="col-sm-12 col-lg-8">
-                    <div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-bs-ride="carousel">
+                    <div id="carouselExampleIndicators" class="carousel slide" data-bs-interval="false">
+                        <div class="carousel-indicators">
+                            <div *ngFor="let item of sliderData; let i = index">
+                                <button type="button" [ngClass]="{'active': i === activeImageId}" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="i" aria-current="true" aria-label="Slide 1"></button>
+                            </div>
+                        </div>
+
                         <div class="carousel-inner">
-                            <div class="switcher">
+                            <div class="switcher" style="display: none;">
                                 <select [(ngModel)]="activeItem" (change)="onChangeSlider(activeItem)"
                                     class="form-select form-select-lg mb-3 float-end"
                                     aria-label=".form-select-lg example">
@@ -25,7 +31,12 @@
                             <div *ngFor="let result of sliderData; let i = index">
                                 <div [attr.init]="i === activeImageId?setActiveIndex(i): false" class="carousel-item" 
                                     [ngClass]="{'active': i === activeImageId}">
-                                    <img src={{result.img}} title={{result.title}} class="slider-img" alt="..."/>
+
+                                    <span class="image-tag">
+                                        {{ result.tag }}
+                                    </span>
+
+                                    <img src={{result.img}} title={{result.tag}} class="slider-img" alt="..." [style.height.px]="customHeight"/>
                                 </div>
                             </div >
                         </div>
@@ -119,7 +130,7 @@
 
             </div>
             <!-- sell -->
-            <div class="row details mt-5 mb-5" *ngIf="proerityType === 'sell'">
+            <div class="row details col-lg-8 mt-5 mb-5" *ngIf="proerityType === 'sell'">
                 <div class="col-sm-12 col-lg-8">
                     <p class="title"> {{'propertyDetails.Details' | translate}}</p>
                     <div id="description" class="desc">
@@ -159,7 +170,7 @@
                 </div>
             </div>
             <!--buy-->
-            <div class="row details mt-5 mb-5" *ngIf="proerityType !== 'sell'">
+            <div class="row details col-lg-8 mt-5 mb-5" *ngIf="proerityType !== 'sell'">
                 <div class="col-sm-12 col-lg-8">
                     <p class="title"> {{'propertyDetails.Details' | translate}}</p>
                     <div id="description" class="desc">
