--- a/src/app/shared/components/contact-us/contact-us.component.html
+++ b/src/app/shared/components/contact-us/contact-us.component.html
@@ -98,14 +98,19 @@
                                         <span>
                                             <fa-icon [icon]="faMapMarkerAlt"></fa-icon>
                                         </span>
-                                        {{contacts.contact_location_en}}
+                                        {{ getLocation() }}
 
                                     </div>
 
                                 </div>
                                 <div class="col-xs-12">
-                                    <div class="map">
+                                    <div *ngIf="country_id === 1" class="map">
                                         <div class="mapouter"><div class="gmap_canvas"><iframe width="383" height="325" id="gmap_canvas" src="https://maps.google.com/maps?q=%D8%A7%D9%84%D9%82%D8%B1%D9%86%D9%81%D9%84%20%D8%A7%D9%84%D8%AA%D8%AC%D9%85%D8%B9%20%D8%A7%D9%84%D8%AE%D8%A7%D9%85%D8%B3&t=&z=15&ie=UTF8&iwloc=&output=embed" 
+                                            frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://fmovies-online.net"></a><br><style>.mapouter{position:relative;text-align:right;height:325px;width:383px;}</style><a href="https://www.embedgooglemap.net"></a><style>.gmap_canvas {overflow:hidden;background:none!important;height:325px;width:383px;}</style></div></div>
+                                    </div>
+
+                                    <div *ngIf="country_id === 2" class="map">
+                                        <div class="mapouter"><div class="gmap_canvas"><iframe width="383" height="325" id="gmap_canvas" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2847.143313923895!2d46.63908431051544!3d24.82950627677308!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e2ee4f2fef5158d%3A0x1397a8fd2685b717!2sBSC!5e0!3m2!1sen!2seg!4v1681654636800!5m2!1sen!2seg" 
                                             frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://fmovies-online.net"></a><br><style>.mapouter{position:relative;text-align:right;height:325px;width:383px;}</style><a href="https://www.embedgooglemap.net"></a><style>.gmap_canvas {overflow:hidden;background:none!important;height:325px;width:383px;}</style></div></div>
                                     </div>
                                 </div>
