--- a/src/app/shared/components/single-property/single-property.component.html
+++ b/src/app/shared/components/single-property/single-property.component.html
@@ -7,9 +7,15 @@
         <div class="col-xs-12 col-md-10 main-row">
             <div class="row">
                 <div class="col-sm-12 col-lg-8">
-                    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                    <div id="carouselExampleIndicators" class="carousel slide" data-bs-interval="false">
+                        <div class="carousel-indicators">
+                            <div *ngFor="let item of sliderData; let i = index">
+                                <button type="button" [ngClass]="{'active': i === activeImageId}" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="i" aria-current="true" aria-label="Slide 1"></button>
+                            </div>
+                        </div>
+                        
                         <div class="carousel-inner">
-                            <div class="switcher">
+                            <div class="switcher" style="display: none;">
                                 <select [(ngModel)]="activeItem" (change)="onChangeSlider(activeItem)"
                                     class="form-select form-select-lg mb-3 float-end"
                                     aria-label=".form-select-lg example" style="width:176px;">
@@ -21,11 +27,18 @@
                                 <span class="count"><span style="color: #FF725F;">{{activeImageId + 1 <= tagLength && activeImageId + 1 !== 0
                                     ?activeImageId + 1 : 1 }}</span>/{{tagLength}}</span>
                             </div>
+
+                            
                             <!-- ngfor loop using get dynamic value and ngclass for add acive class -->
                             <div *ngFor="let result of sliderData; let i = index" >
                                 <div [attr.init]="i === activeImageId?setActiveIndex(i): false" class="carousel-item" 
                                     [ngClass]="{'active': i === activeImageId}">
-                                    <img src={{result.image}} title={{result.title}} class="slider-img" alt="..."/>
+
+                                    <span class="image-tag">
+                                        {{ result.title }}
+                                    </span>
+
+                                    <img src={{result.image}} title={{result.title}} class="slider-img" alt="..." [style.height.px]="customHeight"/>
                                 </div>
                             </div>
                         </div>
