--- a/src/app/shared/components/login-developer/login-developer.component.html
+++ b/src/app/shared/components/login-developer/login-developer.component.html
@@ -76,7 +76,7 @@
                                         [preferredCountries]="preferredCountries" [enableAutoCountrySelect]="true"
                                         [enablePlaceholder]="true" [searchCountryFlag]="true"
                                         [searchCountryField]="[SearchCountryField.Iso2, SearchCountryField.Name]"
-                                        [selectFirstCountry]="false" [selectedCountryISO]="CountryISO.Egypt"
+                                        [selectFirstCountry]="false" [selectedCountryISO]="selectedCountryISO"
                                         [maxLength]="10" [phoneValidation]="true" [separateDialCode]="separateDialCode"
                                         name="phone" formControlName="phone" customPlaceholder="123 456 7891">
 
