--- a/src/styles.scss
+++ b/src/styles.scss
@@ -406,8 +406,8 @@ ng-otp-input {
 }
 
 .form-check-input:checked {
-    background-color: #184d47;
-    border-color: #184d47;
+    background-color: #184d47 !important;
+    border-color: #184d47 !important;
 }
 
 .form-select:focus {
