--- a/src/app/quest/quest.component.html
+++ b/src/app/quest/quest.component.html
@@ -136,7 +136,7 @@
                                               [preferredCountries]="preferredCountries" [enableAutoCountrySelect]="true"
                                               [enablePlaceholder]="true" [searchCountryFlag]="true"
                                               [searchCountryField]="[SearchCountryField.Iso2, SearchCountryField.Name]"
-                                              [selectFirstCountry]="false" [selectedCountryISO]="CountryISO.Egypt"
+                                              [selectFirstCountry]="false" [selectedCountryISO]="selectedCountryISO"
                                               [maxLength]="10" [phoneValidation]="true"
                                               [separateDialCode]="separateDialCode"
                                               [numberFormat]="PhoneNumberFormat.National" name="phone"
