--- a/src/app/shared/components/search-result/search-result.component.scss
+++ b/src/app/shared/components/search-result/search-result.component.scss
@@ -146,6 +146,25 @@
                     }
                 }
             }
+
+            .request-visit{
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+
+                .button-success{
+                    margin-top: 25px;
+                    width: 50%;
+                    color: #fff;
+                    background: #184d47;
+                    border-radius: 40px;
+                    padding: 10px 20px;
+                    box-shadow: 10px;
+                    box-shadow: 0px 10px 15px #a3a3a3;
+                }
+               
+            }
         }
     }
 }
